--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,10 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "socket.io": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.17",
+    "typescript": "^5.3.3"
   }
 }
